--- a/src/components/styles/Footer.module.css
+++ b/src/components/styles/Footer.module.css
@@ -2,7 +2,7 @@
     background-color: #f8f9fa;
     padding: 1rem 0;
     text-align: center;
-    position: absolute;
+    position: fixed !important;
     bottom: 0;
     width: 100%;
   }
